2008-04-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/reference/Makefile.am:
	* flumotion/admin/admin.py:
	* flumotion/common/common.py:
	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/feed.py:
	* flumotion/manager/admin.py:
	* flumotion/twisted/integration.py:
	* flumotion/twisted/rtsp.py:
	* flumotion/ui/glade.py:
	* flumotion/ui/wizard.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/worker/base.py:
	* flumotion/worker/feedserver.py:
	* flumotion/worker/medium.py:
	* flumotion/worker/worker.py:
	  Fix a bunch of documentation errors.

2008-04-25  Johan Dahlin  <johan@flumotion.com>

	* flumotion/extern/Makefile.am:
	* flumotion/extern/unixcrypt.py:
	* flumotion/twisted/credentials.py:
	Add a unixcrypt module as a fallback for crypt for platforms
	where it's not available fixes #941

=== release 0.5.2 ===

2008-04-25  Arek Korbik  <arkadini@gmail.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	Releasing 0.5.2 "Can Tomas".

2008-04-25  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/component.py (BaseComponent.do_check,
	  BaseComponent.check_properties, BaseComponent.do_setup,
	  checkErrorCallback):
	Resurect a part of the code that was removed in r5566 (and
	mostly resurected in r6499): add checking for component's mood
	before continuing with do_setup(). Update API docstrings.
	Fixes #924.

	* doc/random/component-initialization-protocol:
	Make the documentation bits consistent with the implementation.

2008-04-24  Arek Korbik  <arkadini@gmail.com>

	* flumotion.doap:
	Update trac and repository URLs.

2008-04-24  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/producers/bttv/bttv.py:
	Workaround the case where no channels are specified,
	fixes #934

2008-04-24  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/consumers/shout2/shout2.py
	  (Shout2Consumer.get_pipeline_string,
	  Shout2Consumer.configure_pipeline):